160317_CS335_quarter_final/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RANGE

Grammar

Rule 0     S' -> start
Rule 1     start -> SourceFile
Rule 2     Type -> TypeName
Rule 3     Type -> TypeLit
Rule 4     Type -> LPAREN Type RPAREN
Rule 5     TypeName -> TypeToken
Rule 6     TypeName -> QualifiedIdent
Rule 7     TypeToken -> INT
Rule 8     TypeToken -> FLOAT
Rule 9     TypeToken -> UINT
Rule 10    TypeToken -> COMPLEX
Rule 11    TypeToken -> RUNE
Rule 12    TypeToken -> BOOL
Rule 13    TypeToken -> STRING
Rule 14    TypeToken -> TYPE IDENTIFIER
Rule 15    TypeLit -> ArrayType
Rule 16    TypeLit -> StructType
Rule 17    TypeLit -> PointerType
Rule 18    TypeOpt -> Type
Rule 19    TypeOpt -> epsilon
Rule 20    ArrayType -> LSQUARE ArrayLength RSQUARE ElementType
Rule 21    ArrayLength -> Expression
Rule 22    ElementType -> Type
Rule 23    StructType -> CreateFuncScope STRUCT LCURL FieldDeclRep RCURL EndScope
Rule 24    FieldDeclRep -> FieldDeclRep FieldDecl SemiColonOpt
Rule 25    FieldDeclRep -> epsilon
Rule 26    FieldDecl -> IdentifierList Type
Rule 27    PointerType -> STAR BaseType
Rule 28    BaseType -> Type
Rule 29    Signature -> Parameters TypeOpt
Rule 30    Parameters -> LPAREN ParameterListOpt RPAREN
Rule 31    ParameterListOpt -> ParametersList
Rule 32    ParameterListOpt -> epsilon
Rule 33    ParametersList -> ParameterDecl
Rule 34    ParametersList -> ParameterDeclCommaRep
Rule 35    ParameterDeclCommaRep -> ParameterDeclCommaRep COMMA ParameterDecl
Rule 36    ParameterDeclCommaRep -> ParameterDecl COMMA ParameterDecl
Rule 37    ParameterDecl -> IdentifierList Type
Rule 38    ParameterDecl -> Type
Rule 39    Block -> LCURL StatementList RCURL
Rule 40    StatementList -> StatementRep
Rule 41    StatementRep -> StatementRep Statement SemiColonOpt
Rule 42    StatementRep -> epsilon
Rule 43    Declaration -> ConstDecl
Rule 44    Declaration -> TypeDecl
Rule 45    Declaration -> VarDecl
Rule 46    TopLevelDecl -> Declaration
Rule 47    TopLevelDecl -> FunctionDecl
Rule 48    ConstDecl -> CONST ConstSpec
Rule 49    ConstDecl -> CONST LPAREN ConstSpecRep RPAREN
Rule 50    ConstSpecRep -> ConstSpecRep ConstSpec SemiColonOpt
Rule 51    ConstSpecRep -> epsilon
Rule 52    ConstSpec -> IdentifierList Type ASSIGN ExpressionList
Rule 53    IdentifierList -> IDENTIFIER IdentifierRep
Rule 54    IdentifierRep -> IdentifierRep COMMA IDENTIFIER
Rule 55    IdentifierRep -> epsilon
Rule 56    ExpressionList -> Expression ExpressionRep
Rule 57    ExpressionRep -> ExpressionRep COMMA Expression
Rule 58    ExpressionRep -> epsilon
Rule 59    TypeDecl -> TYPE TypeSpec
Rule 60    TypeDecl -> TYPE LPAREN TypeSpecRep RPAREN
Rule 61    TypeSpecRep -> TypeSpecRep TypeSpec SemiColonOpt
Rule 62    TypeSpecRep -> epsilon
Rule 63    TypeSpec -> TypeDef
Rule 64    TypeDef -> IDENTIFIER Type
Rule 65    VarDecl -> VAR VarSpec
Rule 66    VarDecl -> VAR LPAREN VarSpecRep RPAREN
Rule 67    VarSpecRep -> VarSpecRep VarSpec SemiColonOpt
Rule 68    VarSpecRep -> epsilon
Rule 69    VarSpec -> IdentifierList Type ExpressionListOpt
Rule 70    VarSpec -> IdentifierList ASSIGN ExpressionList
Rule 71    ExpressionListOpt -> ASSIGN ExpressionList
Rule 72    ExpressionListOpt -> epsilon
Rule 73    ShortVarDecl -> IDENTIFIER QUICK_ASSIGN Expression
Rule 74    FunctionDecl -> FUNC FunctionName CreateScope Function EndScope
Rule 75    FunctionDecl -> FUNC FunctionName CreateScope Signature EndScope
Rule 76    CreateFuncScope -> <empty>
Rule 77    CreateScope -> <empty>
Rule 78    EndScope -> <empty>
Rule 79    FunctionName -> IDENTIFIER
Rule 80    Function -> Signature FunctionBody
Rule 81    FunctionBody -> Block
Rule 82    BoolConstant -> TRUE
Rule 83    BoolConstant -> FALSE
Rule 84    Operand -> Literal
Rule 85    Operand -> OperandName
Rule 86    Operand -> LPAREN Expression RPAREN
Rule 87    Literal -> BasicLit
Rule 88    BasicLit -> I INTEGER
Rule 89    BasicLit -> I OCTAL
Rule 90    BasicLit -> I HEX
Rule 91    BasicLit -> F FLOAT
Rule 92    BasicLit -> C IMAGINARY
Rule 93    BasicLit -> I RUNE
Rule 94    BasicLit -> S STRING
Rule 95    I -> <empty>
Rule 96    F -> <empty>
Rule 97    C -> <empty>
Rule 98    S -> <empty>
Rule 99    OperandName -> IDENTIFIER
Rule 100   QualifiedIdent -> IDENTIFIER DOT TypeName
Rule 101   PrimaryExpr -> Operand
Rule 102   PrimaryExpr -> BoolConstant
Rule 103   PrimaryExpr -> PrimaryExpr Selector
Rule 104   PrimaryExpr -> Conversion
Rule 105   PrimaryExpr -> PrimaryExpr LSQUARE Expression RSQUARE
Rule 106   PrimaryExpr -> PrimaryExpr Slice
Rule 107   PrimaryExpr -> PrimaryExpr TypeAssertion
Rule 108   PrimaryExpr -> PrimaryExpr LPAREN ExpressionListTypeOpt RPAREN
Rule 109   PrimaryExpr -> IDENTIFIER LCURL StructFieldList RCURL SemiColonOpt
Rule 110   StructFieldList -> IDENTIFIER COLON Expression StructFieldRep
Rule 111   StructFieldList -> epsilon
Rule 112   StructFieldRep -> COMMA IDENTIFIER COLON Expression StructFieldRep
Rule 113   StructFieldRep -> epsilon
Rule 114   Selector -> DOT IDENTIFIER
Rule 115   Slice -> LSQUARE ExpressionOpt COLON ExpressionOpt RSQUARE
Rule 116   Slice -> LSQUARE ExpressionOpt COLON Expression COLON Expression RSQUARE
Rule 117   TypeAssertion -> DOT LPAREN Type RPAREN
Rule 118   ExpressionListTypeOpt -> ExpressionList
Rule 119   ExpressionListTypeOpt -> epsilon
Rule 120   Expression -> UnaryExpr
Rule 121   Expression -> Expression LOGICAL_OR Expression
Rule 122   Expression -> Expression LOGICAL_AND Expression
Rule 123   Expression -> Expression EQUALS Expression
Rule 124   Expression -> Expression NOT_ASSIGN Expression
Rule 125   Expression -> Expression LESSER Expression
Rule 126   Expression -> Expression GREATER Expression
Rule 127   Expression -> Expression LESS_EQUALS Expression
Rule 128   Expression -> Expression MORE_EQUALS Expression
Rule 129   Expression -> Expression OR Expression
Rule 130   Expression -> Expression XOR Expression
Rule 131   Expression -> Expression DIVIDE Expression
Rule 132   Expression -> Expression MOD Expression
Rule 133   Expression -> Expression LSHIFT Expression
Rule 134   Expression -> Expression RSHIFT Expression
Rule 135   Expression -> Expression PLUS Expression
Rule 136   Expression -> Expression MINUS Expression
Rule 137   Expression -> Expression STAR Expression
Rule 138   Expression -> Expression AND Expression
Rule 139   ExpressionOpt -> Expression
Rule 140   ExpressionOpt -> epsilon
Rule 141   UnaryExpr -> PrimaryExpr
Rule 142   UnaryExpr -> UnaryOp UnaryExpr
Rule 143   UnaryExpr -> NOT UnaryExpr
Rule 144   UnaryOp -> PLUS
Rule 145   UnaryOp -> MINUS
Rule 146   UnaryOp -> STAR
Rule 147   UnaryOp -> AND
Rule 148   Conversion -> TYPECAST Type LPAREN Expression RPAREN
Rule 149   Statement -> Declaration
Rule 150   Statement -> LabeledStmt
Rule 151   Statement -> SimpleStmt
Rule 152   Statement -> ReturnStmt
Rule 153   Statement -> BreakStmt
Rule 154   Statement -> ContinueStmt
Rule 155   Statement -> GotoStmt
Rule 156   Statement -> CreateScope Block EndScope
Rule 157   Statement -> IfStmt
Rule 158   Statement -> SwitchStmt
Rule 159   Statement -> ForStmt
Rule 160   Statement -> PrintStmt
Rule 161   Statement -> ScanStmt
Rule 162   PrintStmt -> PRINT Expression
Rule 163   ScanStmt -> SCAN Expression
Rule 164   SimpleStmt -> epsilon
Rule 165   SimpleStmt -> ExpressionStmt
Rule 166   SimpleStmt -> IncDecStmt
Rule 167   SimpleStmt -> Assignment
Rule 168   SimpleStmt -> ShortVarDecl
Rule 169   LabeledStmt -> Label COLON Statement
Rule 170   Label -> IDENTIFIER
Rule 171   ExpressionStmt -> Expression
Rule 172   IncDecStmt -> Expression INCR
Rule 173   IncDecStmt -> Expression DECR
Rule 174   Assignment -> ExpressionList assign_op ExpressionList
Rule 175   assign_op -> AssignOp
Rule 176   AssignOp -> PLUS_ASSIGN
Rule 177   AssignOp -> MINUS_ASSIGN
Rule 178   AssignOp -> STAR_ASSIGN
Rule 179   AssignOp -> DIVIDE_ASSIGN
Rule 180   AssignOp -> MOD_ASSIGN
Rule 181   AssignOp -> AND_ASSIGN
Rule 182   AssignOp -> OR_ASSIGN
Rule 183   AssignOp -> XOR_ASSIGN
Rule 184   AssignOp -> LSHIFT_ASSIGN
Rule 185   AssignOp -> RSHIFT_ASSIGN
Rule 186   AssignOp -> ASSIGN
Rule 187   IfStmt -> IF Expression CreateScopeIf Block EndScope ElseOpt
Rule 188   CreateScopeIf -> <empty>
Rule 189   ElseOpt -> ELSE IfStmt
Rule 190   ElseOpt -> ELSE CreateScope Block EndScope
Rule 191   ElseOpt -> epsilon
Rule 192   SwitchStmt -> ExprSwitchStmt
Rule 193   ExprSwitchStmt -> SWITCH Expression CreateScope LCURL StartSwitch ExprCaseClauseRep RCURL EndScope
Rule 194   StartSwitch -> <empty>
Rule 195   ExprCaseClauseRep -> ExprCaseClauseRep ExprCaseClause
Rule 196   ExprCaseClauseRep -> epsilon
Rule 197   ExprCaseClause -> ExprSwitchCase COLON StatementList
Rule 198   ExprSwitchCase -> CASE Expression
Rule 199   ExprSwitchCase -> DEFAULT
Rule 200   ForStmt -> FOR CreateScopeFor ConditionBlockOpt Block EndScope
Rule 201   CreateScopeFor -> <empty>
Rule 202   ConditionBlockOpt -> epsilon
Rule 203   ConditionBlockOpt -> Condition
Rule 204   ConditionBlockOpt -> ForClause
Rule 205   Condition -> Expression
Rule 206   ForClause -> SimpleStmt SEMICOLON ConditionOpt SEMICOLON SimpleStmt
Rule 207   ConditionOpt -> epsilon
Rule 208   ConditionOpt -> Condition
Rule 209   ReturnStmt -> RETURN ExpressionPureOpt
Rule 210   ExpressionPureOpt -> Expression
Rule 211   ExpressionPureOpt -> epsilon
Rule 212   BreakStmt -> BREAK LabelOpt
Rule 213   ContinueStmt -> CONTINUE LabelOpt
Rule 214   LabelOpt -> Label
Rule 215   LabelOpt -> epsilon
Rule 216   GotoStmt -> GOTO Label
Rule 217   SemiColonOpt -> SEMICOLON
Rule 218   SemiColonOpt -> epsilon
Rule 219   SourceFile -> PackageClause SemiColonOpt ImportDeclRep TopLevelDeclRep
Rule 220   ImportDeclRep -> epsilon
Rule 221   ImportDeclRep -> ImportDeclRep ImportDecl SemiColonOpt
Rule 222   TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SemiColonOpt
Rule 223   TopLevelDeclRep -> epsilon
Rule 224   PackageClause -> PACKAGE PackageName
Rule 225   PackageName -> IDENTIFIER
Rule 226   ImportDecl -> IMPORT ImportSpec
Rule 227   ImportDecl -> IMPORT LPAREN ImportSpecRep RPAREN
Rule 228   ImportSpecRep -> ImportSpecRep ImportSpec SemiColonOpt
Rule 229   ImportSpecRep -> epsilon
Rule 230   ImportSpec -> PackageNameDotOpt ImportPath
Rule 231   PackageNameDotOpt -> DOT
Rule 232   PackageNameDotOpt -> PackageName
Rule 233   PackageNameDotOpt -> epsilon
Rule 234   ImportPath -> STRING
Rule 235   epsilon -> <empty>

Terminals, with rules where they appear

AND                  : 138 147
AND_ASSIGN           : 181
ASSIGN               : 52 70 71 186
BOOL                 : 12
BREAK                : 212
CASE                 : 198
COLON                : 110 112 115 116 116 169 197
COMMA                : 35 36 54 57 112
COMPLEX              : 10
CONST                : 48 49
CONTINUE             : 213
DECR                 : 173
DEFAULT              : 199
DIVIDE               : 131
DIVIDE_ASSIGN        : 179
DOT                  : 100 114 117 231
ELSE                 : 189 190
EQUALS               : 123
FALSE                : 83
FLOAT                : 8 91
FOR                  : 200
FUNC                 : 74 75
GOTO                 : 216
GREATER              : 126
HEX                  : 90
IDENTIFIER           : 14 53 54 64 73 79 99 100 109 110 112 114 170 225
IF                   : 187
IMAGINARY            : 92
IMPORT               : 226 227
INCR                 : 172
INT                  : 7
INTEGER              : 88
LCURL                : 23 39 109 193
LESSER               : 125
LESS_EQUALS          : 127
LOGICAL_AND          : 122
LOGICAL_OR           : 121
LPAREN               : 4 30 49 60 66 86 108 117 148 227
LSHIFT               : 133
LSHIFT_ASSIGN        : 184
LSQUARE              : 20 105 115 116
MINUS                : 136 145
MINUS_ASSIGN         : 177
MOD                  : 132
MOD_ASSIGN           : 180
MORE_EQUALS          : 128
NOT                  : 143
NOT_ASSIGN           : 124
OCTAL                : 89
OR                   : 129
OR_ASSIGN            : 182
PACKAGE              : 224
PLUS                 : 135 144
PLUS_ASSIGN          : 176
PRINT                : 162
QUICK_ASSIGN         : 73
RANGE                : 
RCURL                : 23 39 109 193
RETURN               : 209
RPAREN               : 4 30 49 60 66 86 108 117 148 227
RSHIFT               : 134
RSHIFT_ASSIGN        : 185
RSQUARE              : 20 105 115 116
RUNE                 : 11 93
SCAN                 : 163
SEMICOLON            : 206 206 217
STAR                 : 27 137 146
STAR_ASSIGN          : 178
STRING               : 13 94 234
STRUCT               : 23
SWITCH               : 193
TRUE                 : 82
TYPE                 : 14 59 60
TYPECAST             : 148
UINT                 : 9
VAR                  : 65 66
XOR                  : 130
XOR_ASSIGN           : 183
error                : 

Nonterminals, with rules where they appear

ArrayLength          : 20
ArrayType            : 15
AssignOp             : 175
Assignment           : 167
BaseType             : 27
BasicLit             : 87
Block                : 81 156 187 190 200
BoolConstant         : 102
BreakStmt            : 153
C                    : 92
Condition            : 203 208
ConditionBlockOpt    : 200
ConditionOpt         : 206
ConstDecl            : 43
ConstSpec            : 48 50
ConstSpecRep         : 49 50
ContinueStmt         : 154
Conversion           : 104
CreateFuncScope      : 23
CreateScope          : 74 75 156 190 193
CreateScopeFor       : 200
CreateScopeIf        : 187
Declaration          : 46 149
ElementType          : 20
ElseOpt              : 187
EndScope             : 23 74 75 156 187 190 193 200
ExprCaseClause       : 195
ExprCaseClauseRep    : 193 195
ExprSwitchCase       : 197
ExprSwitchStmt       : 192
Expression           : 21 56 57 73 86 105 110 112 116 116 121 121 122 122 123 123 124 124 125 125 126 126 127 127 128 128 129 129 130 130 131 131 132 132 133 133 134 134 135 135 136 136 137 137 138 138 139 148 162 163 171 172 173 187 193 198 205 210
ExpressionList       : 52 70 71 118 174 174
ExpressionListOpt    : 69
ExpressionListTypeOpt : 108
ExpressionOpt        : 115 115 116
ExpressionPureOpt    : 209
ExpressionRep        : 56 57
ExpressionStmt       : 165
F                    : 91
FieldDecl            : 24
FieldDeclRep         : 23 24
ForClause            : 204
ForStmt              : 159
Function             : 74
FunctionBody         : 80
FunctionDecl         : 47
FunctionName         : 74 75
GotoStmt             : 155
I                    : 88 89 90 93
IdentifierList       : 26 37 52 69 70
IdentifierRep        : 53 54
IfStmt               : 157 189
ImportDecl           : 221
ImportDeclRep        : 219 221
ImportPath           : 230
ImportSpec           : 226 228
ImportSpecRep        : 227 228
IncDecStmt           : 166
Label                : 169 214 216
LabelOpt             : 212 213
LabeledStmt          : 150
Literal              : 84
Operand              : 101
OperandName          : 85
PackageClause        : 219
PackageName          : 224 232
PackageNameDotOpt    : 230
ParameterDecl        : 33 35 36 36
ParameterDeclCommaRep : 34 35
ParameterListOpt     : 30
Parameters           : 29
ParametersList       : 31
PointerType          : 17
PrimaryExpr          : 103 105 106 107 108 141
PrintStmt            : 160
QualifiedIdent       : 6
ReturnStmt           : 152
S                    : 94
ScanStmt             : 161
Selector             : 103
SemiColonOpt         : 24 41 50 61 67 109 219 221 222 228
ShortVarDecl         : 168
Signature            : 75 80
SimpleStmt           : 151 206 206
Slice                : 106
SourceFile           : 1
StartSwitch          : 193
Statement            : 41 169
StatementList        : 39 197
StatementRep         : 40 41
StructFieldList      : 109
StructFieldRep       : 110 112
StructType           : 16
SwitchStmt           : 158
TopLevelDecl         : 222
TopLevelDeclRep      : 219 222
Type                 : 4 18 22 26 28 37 38 52 64 69 117 148
TypeAssertion        : 107
TypeDecl             : 44
TypeDef              : 63
TypeLit              : 3
TypeName             : 2 100
TypeOpt              : 29
TypeSpec             : 59 61
TypeSpecRep          : 60 61
TypeToken            : 5
UnaryExpr            : 120 142 143
UnaryOp              : 142
VarDecl              : 45
VarSpec              : 65 67
VarSpecRep           : 66 67
assign_op            : 174
epsilon              : 19 25 32 42 51 55 58 62 68 72 111 113 119 140 164 191 196 202 207 211 215 218 220 223 229 233
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . SourceFile
    (219) SourceFile -> . PackageClause SemiColonOpt ImportDeclRep TopLevelDeclRep
    (224) PackageClause -> . PACKAGE PackageName

    PACKAGE         shift and go to state 2

    PackageClause                  shift and go to state 1
    SourceFile                     shift and go to state 3
    start                          shift and go to state 4

state 1

    (219) SourceFile -> PackageClause . SemiColonOpt ImportDeclRep TopLevelDeclRep
    (217) SemiColonOpt -> . SEMICOLON
    (218) SemiColonOpt -> . epsilon
    (235) epsilon -> .

    SEMICOLON       shift and go to state 5
    IMPORT          reduce using rule 235 (epsilon -> .)
    FUNC            reduce using rule 235 (epsilon -> .)
    CONST           reduce using rule 235 (epsilon -> .)
    TYPE            reduce using rule 235 (epsilon -> .)
    VAR             reduce using rule 235 (epsilon -> .)
    $end            reduce using rule 235 (epsilon -> .)

    SemiColonOpt                   shift and go to state 7
    epsilon                        shift and go to state 6

state 2

    (224) PackageClause -> PACKAGE . PackageName
    (225) PackageName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 9

    PackageName                    shift and go to state 8

state 3

    (1) start -> SourceFile .

    $end            reduce using rule 1 (start -> SourceFile .)


state 4

    (0) S' -> start .



state 5

    (217) SemiColonOpt -> SEMICOLON .

    LSQUARE         reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    LPAREN          reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    DOT             reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    LOGICAL_OR      reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    LOGICAL_AND     reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    EQUALS          reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    NOT_ASSIGN      reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    LESSER          reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    GREATER         reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    LESS_EQUALS     reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    MORE_EQUALS     reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    OR              reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    XOR             reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    DIVIDE          reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    MOD             reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    LSHIFT          reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    RSHIFT          reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    PLUS            reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    MINUS           reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    STAR            reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    AND             reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    RSQUARE         reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    COMMA           reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    SEMICOLON       reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    FUNC            reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    CONST           reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    TYPE            reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    VAR             reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    $end            reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    RETURN          reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    BREAK           reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    CONTINUE        reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    GOTO            reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    IF              reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    FOR             reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    PRINT           reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    SCAN            reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    IDENTIFIER      reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    SWITCH          reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    NOT             reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    TRUE            reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    FALSE           reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    TYPECAST        reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    LCURL           reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    INTEGER         reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    OCTAL           reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    HEX             reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    RUNE            reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    FLOAT           reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    IMAGINARY       reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    STRING          reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    RCURL           reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    CASE            reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    DEFAULT         reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    RPAREN          reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    COLON           reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    INCR            reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    DECR            reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    PLUS_ASSIGN     reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    MINUS_ASSIGN    reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    STAR_ASSIGN     reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    DIVIDE_ASSIGN   reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    MOD_ASSIGN      reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    AND_ASSIGN      reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    OR_ASSIGN       reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    XOR_ASSIGN      reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    LSHIFT_ASSIGN   reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    RSHIFT_ASSIGN   reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    ASSIGN          reduce using rule 217 (SemiColonOpt -> SEMICOLON .)
    IMPORT          reduce using rule 217 (SemiColonOpt -> SEMICOLON .)


state 6

    (218) SemiColonOpt -> epsilon .

    LSQUARE         reduce using rule 218 (SemiColonOpt -> epsilon .)
    LPAREN          reduce using rule 218 (SemiColonOpt -> epsilon .)
    DOT             reduce using rule 218 (SemiColonOpt -> epsilon .)
    LOGICAL_OR      reduce using rule 218 (SemiColonOpt -> epsilon .)
    LOGICAL_AND     reduce using rule 218 (SemiColonOpt -> epsilon .)
    EQUALS          reduce using rule 218 (SemiColonOpt -> epsilon .)
    NOT_ASSIGN      reduce using rule 218 (SemiColonOpt -> epsilon .)
    LESSER          reduce using rule 218 (SemiColonOpt -> epsilon .)
    GREATER         reduce using rule 218 (SemiColonOpt -> epsilon .)
    LESS_EQUALS     reduce using rule 218 (SemiColonOpt -> epsilon .)
    MORE_EQUALS     reduce using rule 218 (SemiColonOpt -> epsilon .)
    OR              reduce using rule 218 (SemiColonOpt -> epsilon .)
    XOR             reduce using rule 218 (SemiColonOpt -> epsilon .)
    DIVIDE          reduce using rule 218 (SemiColonOpt -> epsilon .)
    MOD             reduce using rule 218 (SemiColonOpt -> epsilon .)
    LSHIFT          reduce using rule 218 (SemiColonOpt -> epsilon .)
    RSHIFT          reduce using rule 218 (SemiColonOpt -> epsilon .)
    PLUS            reduce using rule 218 (SemiColonOpt -> epsilon .)
    MINUS           reduce using rule 218 (SemiColonOpt -> epsilon .)
    STAR            reduce using rule 218 (SemiColonOpt -> epsilon .)
    AND             reduce using rule 218 (SemiColonOpt -> epsilon .)
    RSQUARE         reduce using rule 218 (SemiColonOpt -> epsilon .)
    COMMA           reduce using rule 218 (SemiColonOpt -> epsilon .)
    SEMICOLON       reduce using rule 218 (SemiColonOpt -> epsilon .)
    FUNC            reduce using rule 218 (SemiColonOpt -> epsilon .)
    CONST           reduce using rule 218 (SemiColonOpt -> epsilon .)
    TYPE            reduce using rule 218 (SemiColonOpt -> epsilon .)
    VAR             reduce using rule 218 (SemiColonOpt -> epsilon .)
    $end            reduce using rule 218 (SemiColonOpt -> epsilon .)
    RETURN          reduce using rule 218 (SemiColonOpt -> epsilon .)
    BREAK           reduce using rule 218 (SemiColonOpt -> epsilon .)
    CONTINUE        reduce using rule 218 (SemiColonOpt -> epsilon .)
    GOTO            reduce using rule 218 (SemiColonOpt -> epsilon .)
    IF              reduce using rule 218 (SemiColonOpt -> epsilon .)
    FOR             reduce using rule 218 (SemiColonOpt -> epsilon .)
    PRINT           reduce using rule 218 (SemiColonOpt -> epsilon .)
    SCAN            reduce using rule 218 (SemiColonOpt -> epsilon .)
    IDENTIFIER      reduce using rule 218 (SemiColonOpt -> epsilon .)
    SWITCH          reduce using rule 218 (SemiColonOpt -> epsilon .)
    NOT             reduce using rule 218 (SemiColonOpt -> epsilon .)
    TRUE            reduce using rule 218 (SemiColonOpt -> epsilon .)
    FALSE           reduce using rule 218 (SemiColonOpt -> epsilon .)
    TYPECAST        reduce using rule 218 (SemiColonOpt -> epsilon .)
    LCURL           reduce using rule 218 (SemiColonOpt -> epsilon .)
    INTEGER         reduce using rule 218 (SemiColonOpt -> epsilon .)
    OCTAL           reduce using rule 218 (SemiColonOpt -> epsilon .)
    HEX             reduce using rule 218 (SemiColonOpt -> epsilon .)
    RUNE            reduce using rule 218 (SemiColonOpt -> epsilon .)
    FLOAT           reduce using rule 218 (SemiColonOpt -> epsilon .)
    IMAGINARY       reduce using rule 218 (SemiColonOpt -> epsilon .)
    STRING          reduce using rule 218 (SemiColonOpt -> epsilon .)
    RCURL           reduce using rule 218 (SemiColonOpt -> epsilon .)
    CASE            reduce using rule 218 (SemiColonOpt -> epsilon .)
    DEFAULT         reduce using rule 218 (SemiColonOpt -> epsilon .)
    RPAREN          reduce using rule 218 (SemiColonOpt -> epsilon .)
    COLON           reduce using rule 218 (SemiColonOpt -> epsilon .)
    INCR            reduce using rule 218 (SemiColonOpt -> epsilon .)
    DECR            reduce using rule 218 (SemiColonOpt -> epsilon .)
    PLUS_ASSIGN     reduce using rule 218 (SemiColonOpt -> epsilon .)
    MINUS_ASSIGN    reduce using rule 218 (SemiColonOpt -> epsilon .)
    STAR_ASSIGN     reduce using rule 218 (SemiColonOpt -> epsilon .)
    DIVIDE_ASSIGN   reduce using rule 218 (SemiColonOpt -> epsilon .)
    MOD_ASSIGN      reduce using rule 218 (SemiColonOpt -> epsilon .)
    AND_ASSIGN      reduce using rule 218 (SemiColonOpt -> epsilon .)
    OR_ASSIGN       reduce using rule 218 (SemiColonOpt -> epsilon .)
    XOR_ASSIGN      reduce using rule 218 (SemiColonOpt -> epsilon .)
    LSHIFT_ASSIGN   reduce using rule 218 (SemiColonOpt -> epsilon .)
    RSHIFT_ASSIGN   reduce using rule 218 (SemiColonOpt -> epsilon .)
    ASSIGN          reduce using rule 218 (SemiColonOpt -> epsilon .)
    IMPORT          reduce using rule 218 (SemiColonOpt -> epsilon .)


state 7

    (219) SourceFile -> PackageClause SemiColonOpt . ImportDeclRep TopLevelDeclRep
    (220) ImportDeclRep -> . epsilon
    (221) ImportDeclRep -> . ImportDeclRep ImportDecl SemiColonOpt
    (235) epsilon -> .

    IMPORT          reduce using rule 235 (epsilon -> .)
    FUNC            reduce using rule 235 (epsilon -> .)
    CONST           reduce using rule 235 (epsilon -> .)
    TYPE            reduce using rule 235 (epsilon -> .)
    VAR             reduce using rule 235 (epsilon -> .)
    $end            reduce using rule 235 (epsilon -> .)

    epsilon                        shift and go to state 10
    ImportDeclRep                  shift and go to state 11

state 8

    (224) PackageClause -> PACKAGE PackageName .

    SEMICOLON       reduce using rule 224 (PackageClause -> PACKAGE PackageName .)
    IMPORT          reduce using rule 224 (PackageClause -> PACKAGE PackageName .)
    FUNC            reduce using rule 224 (PackageClause -> PACKAGE PackageName .)
    CONST           reduce using rule 224 (PackageClause -> PACKAGE PackageName .)
    TYPE            reduce using rule 224 (PackageClause -> PACKAGE PackageName .)
    VAR             reduce using rule 224 (PackageClause -> PACKAGE PackageName .)
    $end            reduce using rule 224 (PackageClause -> PACKAGE PackageName .)


state 9

    (225) PackageName -> IDENTIFIER .
